# Group-Project-2025-2026

./: .gitignore  index.html  package-lock.json  package.json  pom.xml
ai/: .gitignore  main.py  pyproject.toml  test_endpoints.py
ai/src/: models.py
ai/src/api/: __init__.py  router.py
ai/src/api/endpoints/: campaign.py  setting.py
ai/src/db/: db.py  models.py
ai/src/llm/: __init__.py  dungeon_master.py  llm.py  tools.py
ai/src/models/: campaign.py  location.py  setting.py  world.py
ai/src/nodes/: location.py  setting.py  world.py
ai/src/rag/: __init__.py  load_documents.py  rag.py
ai/src/rag/ai/chromadb/f9c929fd-dae1-4691-b9b4-ce19c11ab964/: index_metadata.pickle
ai/src/routes/: game.py  generate.py  generation.py
ai/src/workflows/: locations_graph.py  setting_graph.py  world_graph.py
back_end/: .gitignore  Dockerfile  PZ_Plan.txt  pom.xml
back_end/src/main/java/com/example/projekt_zesp/: ProjektZespApplication.java
back_end/src/main/resources/: application.properties
back_end/src/test/java/com/example/projekt_zesp/: ProjektZespApplicationTests.java  (+1 more)
src/: App.jsx  index.css
src/components/: Button.css  Input.css  Input.jsx  Layout.css  Layout.jsx
src/main/resources/: application.properties
src/pages/Dashboard/: Dashboard.jsx  Dashboard.module.css
src/pages/Friends/: Friends.jsx  Friends.module.css
src/pages/GameHistory/: GameHistory.jsx  GameHistory.module.css
src/pages/Login/: Login.jsx  Login.module.css
src/pages/NewGame/: NewGame.jsx  NewGame.module.css
src/pages/Register/: Register.jsx  Register.module.css
(+53 files in other folders)
